# inbox-search

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt  requitemets.txt
.github/workflows/: python-tests.yml
configs/: dev-config.yaml
src/: ultils.py
src/preprocessing/: data_models.py  main.py  preprocessing.py
src/semantic_search/: search.py
test/: test_preprocessing.py  test_semantic_search.py  test_utils.py
